--- a/index.html
+++ b/index.html
@@ -23,9 +23,13 @@
 </head>
 
 <body>
-    
 
 
+  <header>
+      
+  </header>
+  <main></main>
+  <footer></footer>
 
     <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
     <script src="assets/js/vendor/bootstrap.min.js"></script>
