refactor : add color

--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+    
     <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
     <link rel="stylesheet" href="assets/scss/main.css">
 
@@ -26,7 +29,21 @@
 
 
   <header>
-      
+      <div class="header">
+        <div class="logo">
+          <h1>Brandi</h1>
+          <span>I'am your tag line</span>
+        </div>
+        <div class="menu">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Feartures</a></li>
+            <li><a href="#">Works</a></li>
+            <li><a href="#">Team</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </div>
+      </div>
   </header>
   <main></main>
   <footer></footer>
