--- a/index.html
+++ b/index.html
@@ -333,10 +333,11 @@
 
           </div>
         </div>
+        
         <div class="works__content">
           <div class="row isotope-grid isotope grid">
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item brandi">
-              <div class="isotope-block-pic">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item brandi top1">
+              <div class="isotope-block-pic ">
                   <img src="assets/img/work-01.png" loading="lazy" alt="">
                 <div class="works__content-hover">
                 <div class="works__content__img">
@@ -347,7 +348,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item web">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item web top1">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-02.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -359,7 +360,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item logo">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item logo top1">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-03.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -371,7 +372,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item photography">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item photography top1" id="top2">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-04.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -383,7 +384,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item brandi">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item brandi ">
               <div class="isotope-block-pic">
                   <img src="assets/img/work-05.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -395,7 +396,7 @@
                 </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item web">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item web ">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-06.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -407,7 +408,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item logo">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item logo">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-07.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -419,7 +420,7 @@
                   </div>
               </div>
             </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 isotope-item photography">
+            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6  isotope-item photography">
               <div class="isotope-block-pic">
                 <img src="assets/img/work-08.png" loading="lazy" alt="">
                 <div class="works__content-hover">
@@ -431,8 +432,10 @@
                   </div>
               </div>
             </div>
+            </div>
           </div>
-        </div>
+
+         
         </div>
       </div>
     </section>
