--- a/index.html
+++ b/index.html
@@ -313,130 +313,100 @@
         </div>
       </div>
       <div class="works">
-        <div class="works__menu">
-          <div class="product-menu-left flex-w flex-l-m m-tb-10  button-group filter-button-group">
-            <button class="  button is-checked" data-filter="*">
-              All
-            </button>
-            <button class="  button" data-filter=".brandi">
-              Brandi
-            </button>
-            <button class="  button" data-filter=".web">
-              Web
-            </button>
-            <button class="  button" data-filter=".logo">
-              Logo Design
-            </button>
-            <button class="  button" data-filter=".photography">
-              Photography
-            </button>
 
-          </div>
+        <div id='filter' class="works__menu">
+          <button class='all active'>All</button>
+          <button class='brandi'>Brandi</button>
+          <button class='web'>Web</button>
+          <button class='logo'>Logo Design</button>
+          <button class='photography'>Photography</button>
+
         </div>
-        
-        <div class="works__content">
-          <div class="row isotope-grid isotope grid">
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item brandi top1">
-              <div class="isotope-block-pic ">
-                  <img src="assets/img/work-01.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                <div class="works__content__img">
-                  <img src="assets/img/view.png" alt="">
-                </div>
-                  <h3>Labore et dolore magnam</h3>
-                  <p>Photography</p>
-                </div>
+
+        <div id='posts'>
+          <div class='post brandi'>
+            <img src="assets/img/work-01.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
               </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item web top1">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-02.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item logo top1">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-03.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item photography top1" id="top2">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-04.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item brandi ">
-              <div class="isotope-block-pic">
-                  <img src="assets/img/work-05.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                <div class="works__content__img">
-                  <img src="assets/img/view.png" alt="">
-                </div>
-                  <h3>Labore et dolore magnam</h3>
-                  <p>Photography</p>
-                </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item web ">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-06.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6 isotope-item logo">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-07.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
-            <div class="col-sm-6 col-md-4 col-lg-3 col-xs-6  isotope-item photography">
-              <div class="isotope-block-pic">
-                <img src="assets/img/work-08.png" loading="lazy" alt="">
-                <div class="works__content-hover">
-                  <div class="works__content__img">
-                    <img src="assets/img/view.png" alt="">
-                  </div>
-                    <h3>Labore et dolore magnam</h3>
-                    <p>Photography</p>
-                  </div>
-              </div>
-            </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
             </div>
           </div>
-
-         
+          <div class='post web'>
+            <img src="assets/img/work-02.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post logo'>
+            <img src="assets/img/work-03.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post photography'>
+            <img src="assets/img/work-04.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post brandi'>
+            <img src="assets/img/work-05.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post web'><img src="assets/img/work-06.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post logo'><img src="assets/img/work-07.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
+          <div class='post photography'><img src="assets/img/work-08.png" loading="lazy" alt="">
+            <div class="works__content-hover">
+              <div class="works__content__img">
+                <img src="assets/img/view.png" alt="">
+              </div>
+              <h3>Labore et dolore magnam</h3>
+              <p>Photography</p>
+            </div>
+          </div>
         </div>
+        <div class='hidden'></div>
+        <div class="height"></div>
+
+
+
       </div>
     </section>
   </main>
@@ -480,7 +450,8 @@
             <p class="footer-margin-bottom footer-border-left">Created with <img src="assets/img/heart.png" alt=""> by
               <span class="footer-black">Themecurve,
                 Exclusive for kreativeshowcase
-              </span></p>
+              </span>
+            </p>
             <p class="footer-border-left footer-black"> © 2014 Brandi . All Rights Reserved</p>
           </div>
         </div>
