--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <link rel="stylesheet" href="assets/css/vendor/slick.css">
   <link rel="stylesheet" href="assets/css/vendor/slick-theme.css">
   <link rel="stylesheet" href="assets/css/vendor/bootstrap.css">
-  <link rel="stylesheet" href="assets/css/vendor/isotope-docs.css">
+  <!-- <link rel="stylesheet" href="assets/css/vendor/isotope-docs.css"> -->
   <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
@@ -43,13 +43,11 @@
         <input type="checkbox" id="chk">
         <div class="header__menu">
           <ul>
-
             <li><a href="#">Home</a></li>
             <li><a href="#">Feartures</a></li>
             <li><a href="#">Works</a></li>
             <li><a href="#">Team</a></li>
             <li><a href="#">Contact</a></li>
-
           </ul>
           <label for="chk" class="hide-menu-btn">
             <i class="fas fa-times"></i>
@@ -63,7 +61,6 @@
   </header>
   <main>
     <div class="banner">
-
       <!-- Swiper -->
       <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -76,25 +73,23 @@
             </div>
             <ul>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-google-plus-g"></i>
-
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-dribbble"></i>
-
                 </a>
               </li>
             </ul>
@@ -108,25 +103,23 @@
             </div>
             <ul>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-google-plus-g"></i>
-
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-dribbble"></i>
-
                 </a>
               </li>
             </ul>
@@ -140,25 +133,23 @@
             </div>
             <ul>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-twitter"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-facebook-f"></i>
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-google-plus-g"></i>
-
                 </a>
               </li>
               <li>
-                <a href="">
+                <a href="#">
                   <i class="fab fa-dribbble"></i>
-
                 </a>
               </li>
             </ul>
@@ -166,9 +157,6 @@
         </div>
         <!-- Add Pagination -->
         <div class="swiper-pagination"></div>
-
-
-
       </div>
     </div>
 
@@ -403,10 +391,345 @@
           </div>
         </div>
         <div class='hidden'></div>
-        <div class="height"></div>
+        <!-- <div class="height"></div> -->
+      </div>
+    </section>
 
+    <!-- Meet Our Team  -->
+    <section class="team">
+      <div class="container">
+        <div class="title">
+          <h2>MEET OUR TEAM</h2>
+          <div class="title__img">
+            <hr>
+            <img src="assets/img/heart.png" alt="">
+            <hr>
+          </div>
+          <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
+            laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+        </div>
+        <div class="team__content">
+          <section class="regular1 slider">
+            <div class="team__content__card">
+                <div class="team__content__img">
+                  <img src="assets/img/team-01.png" alt="">
+                  <div class="team__content__img__hover">
+                    <div class="image__hover__text">
+                      <h3>
+                        Nemo enim ipsam voluptatem quia voluptas
+                      </h3>
+                      <p>
+                        sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                      </p>
+                    </div>
+                    <div class="img__hover__icon">
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-facebook-f"></i></a>
+                      <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="team__content__text">
+                  <h3>John Filmr Doe</h3>
+                  <p>Managing Director</p>
+                </div>
+            </div>
+            <div class="team__content__card">
+                <div class="team__content__img">
+                  <img src="assets/img/team-02.png" alt="">
+                  <div class="team__content__img__hover">
+                    <div class="image__hover__text">
+                      <h3>
+                        Nemo enim ipsam voluptatem quia voluptas
+                      </h3>
+                      <p>
+                        sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                      </p>
+                    </div>
+                    <div class="img__hover__icon">
+                      <a href="#"><i class="fab fa-twitter"></i></a>
+                      <a href="#"><i class="fab fa-facebook-f"></i></a>
+                      <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                    </div>
+                  </div>
+                </div>
+                <div class="team__content__text">
+                  <h3>Chystine Hineu</h3>
+                  <p>Lead Designer</p>
+                </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-03.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>Martin Matrone</h3>
+                <p>Lead Developer</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-04.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>Steve Flaulkin</h3>
+                <p>Sr. UI Designer</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-01.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>John Filmr Doe</h3>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-03.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>John Filmr Doe</h3>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-02.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>John Filmr Doe</h3>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-04.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>John Filmr Doe</h3>
+                <p>Managing Director</p>
+              </div>
+            </div>
+            <div class="team__content__card">
+              <div class="team__content__img">
+                <img src="assets/img/team-02.png" alt="">
+                <div class="team__content__img__hover">
+                  <div class="image__hover__text">
+                    <h3>
+                      Nemo enim ipsam voluptatem quia voluptas
+                    </h3>
+                    <p>
+                      sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem.
+                    </p>
+                  </div>
+                  <div class="img__hover__icon">
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-google-plus-g"></i></a>
+                  </div>
+                </div>
+              </div>
+              <div class="team__content__text">
+                <h3>John Filmr Doe</h3>
+                <p>Managing Director</p>
+              </div>
+            </div>
+          </section>
+        </div>
+      </div>
+    </section>
 
+    <!-- Some Fun Facts -->
+    <section class="background-facts">
+      <div class="container">
+        <div class="title">
+          <h2>SOME FUN FACTS</h2>
+          <div class="title__img">
+            <hr>
+            <img src="assets/img/heart-white.png" alt="">
+            <hr>
+          </div>
+        </div>
+        <div class="facts">
+          <div class="row">
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="facts__img">
+                <img src="assets/img/funfacts-01.png" alt="">
+              </div>
+              <h3>3200</h3>
+              <p>HOURS OF WORK</p>
+            </div> 
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="facts__img">
+                <img src="assets/img/funfacts-02.png" alt="">
+              </div>
+              <h3>120</h3>
+              <p>Satisfied Clinets</p>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="facts__img">
+                <img src="assets/img/funfacts-03.png" alt="">
+              </div>
+              <h3>360</h3>
+              <p>Projects delivered</p>
+            </div>
+            <div class="col-md-3 col-sm-3 col-xs-6">
+              <div class="facts__img">
+                <img src="assets/img/funfacts-04.png" alt="">
+              </div>
+              <h3>42</h3>
+              <p>Awards Won</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
+    <!-- Discuss -->
+    <section class="discuss">
+      <div class="title">
+        <h2>LET'S DISCUSS</h2>
+        <div class="title__img">
+          <hr>
+          <img src="assets/img/heart.png" alt="">
+          <hr>
+        </div>
+        <p>Voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
+      </div>
+      <div class="container">
+        <div class="row">
+          <div class="col-md-3">
+            <h3>
+              Cras at ultrices erat, sed vulputate!
+            </h3>
+            <p>
+              2345 Setwant natrer, 1234, 
+              Washington. United States.
+              (401) 1234 567
+              hello@brandi.com
+              ww.brandi.com
+            </p>
+          </div>
+          <div class="col-md-8">
+            <h2>Say hello!</h2>
+            <div class="discuss__input">
+              <input type="text" placeholder="Name">
+              <input type="text" placeholder="Email">
+            </div>
+            <input type="text" placeholder="Message">
+            <div class="discuss__button">
+              <a href="#" >
+                <img src="assets/img/discuss-07.png" alt="">
+                    Send message
+              </a>
+            </div>
+          </div>
+          <div class="col-md-1">
+            <div class="discuss__icon">
+              <img src="assets/img/discuss-01.png" alt="" title="behance.net">
+              <img src="assets/img/discuss-02.png" alt="" title="https://twitter.com/">
+              <img src="assets/img/discuss-03.png" alt="" title="https://dribbble.com/">
+              <img src="assets/img/discuss-04.png" alt="" title="https://forrst.me/">
+              <img src="assets/img/discuss-05.png" alt="" title="https://www.google.com/">
+              <img src="assets/img/discuss-06.png" alt="" title="https://www.facebook.com/">
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="discuss__map">
+        <!-- <img src="assets/img/map.png" alt=""> -->
       </div>
     </section>
   </main>
@@ -430,19 +753,19 @@
             </div>
             <p>eusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           </div>
-          <div class="col-md-3 col-sm-6">
+          <div class="col-md-3 col-sm-6 footer__explore">
             <h3>Explore</h3>
-            <div class="col-md-6 col-sm-6">
-              <p>Envato</p>
-              <p>Themecurve</p>
-              <p>Kreativeshowcase</p>
-              <p>Freebiescurve</p>
+            <div class="col-md-6 col-sm-6 footer__explore-display-grid">
+              <a href="#">Envato</a>
+              <a href="#">Themecurve</a>
+              <a href="#">Kreativeshowcase</a>
+              <a href="#">Freebiescurve</a>
             </div>
-            <div class="col-md-6 col-sm-6">
-              <p>Themeforest</p>
-              <p>Microsoft</p>
-              <p>Google</p>
-              <p>Yahoo</p>
+            <div class="col-md-6 col-sm-6 footer__explore-display-grid">
+              <a href="#">Themeforest</a>
+              <a href="#">Microsoft</a>
+              <a href="#">Google</a>
+              <a href="#">Yahoo</a>
             </div>
           </div>
           <div class="col-md-3 col-sm-12">
@@ -463,7 +786,7 @@
   <script src="assets/js/vendor/bootstrap.min.js"></script>
   <script src="assets/js/vendor/slick.js"></script>
   <script src="assets/js/vendor/swiper-bundle.min.js"></script>
-  <script src="assets/js/vendor/isotope-docs.min.js"></script>
+  <!-- <script src="assets/js/vendor/isotope-docs.min.js"></script> -->
   <script src="assets/js/main.js"></script>
 
 </body>
