--- a/index.html
+++ b/index.html
@@ -302,17 +302,17 @@
       </div>
       <div class="works">
 
-        <div id='filter' class="works__menu">
-          <button class='all active'>All</button>
-          <button class='brandi'>Brandi</button>
-          <button class='web'>Web</button>
-          <button class='logo'>Logo Design</button>
-          <button class='photography'>Photography</button>
+        <div id="filter" class="works__menu">
+          <button class="all active">All</button>
+          <button class="brandi">Brandi</button>
+          <button class="web">Web</button>
+          <button class="logo">Logo Design</button>
+          <button class="photography">Photography</button>
 
         </div>
 
-        <div id='posts'>
-          <div class='post brandi'>
+        <div id="posts">
+          <div class="post brandi">
             <img src="assets/img/work-01.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
@@ -322,7 +322,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post web'>
+          <div class="post web">
             <img src="assets/img/work-02.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
@@ -332,7 +332,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post logo'>
+          <div class="post logo">
             <img src="assets/img/work-03.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
@@ -342,7 +342,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post photography'>
+          <div class="post photography">
             <img src="assets/img/work-04.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
@@ -352,7 +352,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post brandi'>
+          <div class="post brandi">
             <img src="assets/img/work-05.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
@@ -362,7 +362,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post web'><img src="assets/img/work-06.png" loading="lazy" alt="">
+          <div class="post web"><img src="assets/img/work-06.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
@@ -371,7 +371,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post logo'><img src="assets/img/work-07.png" loading="lazy" alt="">
+          <div class="post logo"><img src="assets/img/work-07.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
@@ -380,7 +380,7 @@
               <p>Photography</p>
             </div>
           </div>
-          <div class='post photography'><img src="assets/img/work-08.png" loading="lazy" alt="">
+          <div class="post photography"><img src="assets/img/work-08.png" loading="lazy" alt="">
             <div class="works__content-hover">
               <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
@@ -390,7 +390,7 @@
             </div>
           </div>
         </div>
-        <div class='hidden'></div>
+        <div class="hidden"></div>
         <!-- <div class="height"></div> -->
       </div>
     </section>
@@ -414,7 +414,7 @@
                 <div class="team__content__img">
                   <img src="assets/img/team-01.png" alt="">
                   <div class="team__content__img__hover">
-                    <div class="image__hover__text">
+                    <div >
                       <h3>
                         Nemo enim ipsam voluptatem quia voluptas
                       </h3>
@@ -438,7 +438,7 @@
                 <div class="team__content__img">
                   <img src="assets/img/team-02.png" alt="">
                   <div class="team__content__img__hover">
-                    <div class="image__hover__text">
+                    <div >
                       <h3>
                         Nemo enim ipsam voluptatem quia voluptas
                       </h3>
@@ -462,7 +462,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-03.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -486,7 +486,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-04.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -510,7 +510,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-01.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -534,7 +534,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-03.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -558,7 +558,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-02.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -582,7 +582,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-04.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -606,7 +606,7 @@
               <div class="team__content__img">
                 <img src="assets/img/team-02.png" alt="">
                 <div class="team__content__img__hover">
-                  <div class="image__hover__text">
+                  <div >
                     <h3>
                       Nemo enim ipsam voluptatem quia voluptas
                     </h3>
@@ -755,13 +755,13 @@
           </div>
           <div class="col-md-3 col-sm-6 footer__explore">
             <h3>Explore</h3>
-            <div class="col-md-6 col-sm-6 footer__explore-display-grid">
+            <div class="col-md-6 col-sm-6">
               <a href="#">Envato</a>
               <a href="#">Themecurve</a>
               <a href="#">Kreativeshowcase</a>
               <a href="#">Freebiescurve</a>
             </div>
-            <div class="col-md-6 col-sm-6 footer__explore-display-grid">
+            <div class="col-md-6 col-sm-6 ">
               <a href="#">Themeforest</a>
               <a href="#">Microsoft</a>
               <a href="#">Google</a>
