fix : header , main , footer

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
 
   <header>
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="header">
         <div class="header__logo">
           <h1><a href="#">Brandi</a></h1>
@@ -57,7 +57,7 @@
           <i class="fas fa-bars"></i>
         </label>
       </div>
-    </div>
+    <!-- </div> -->
   </header>
   <main>
     <div class="banner">
@@ -162,7 +162,6 @@
 
     <!-- features -->
     <div class="background-features">
-      <div class="container">
         <div class="title">
           <h2>FEATURES</h2>
           <div class="title__img">
@@ -174,121 +173,101 @@
         <div class="features">
           <section class="regular slider">
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-01.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Branding</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-02.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Development</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-03.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Consulting</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-01.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Branding</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-02.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Development</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-03.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Consulting</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-01.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Branding</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-02.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Development</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
             <div class="features__content">
-              <div class="row">
-                <div class="features__content__img col-md-2">
+                <div class="features__content__img ">
                   <img src="assets/img/feature-03.png" alt="">
                 </div>
-                <div class="features__content__text col-md-10">
+                <div class="features__content__text ">
                   <h2>Consulting</h2>
                   <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium,
                     totam rem aperiam, eaque ipsa quae ab illo inventore</p>
                 </div>
-              </div>
             </div>
           </section>
         </div>
-      </div>
     </div>
 
     <!-- works -->
     <section class="background-works">
-      <div class="container">
         <div class="title">
           <h2>WORKS</h2>
           <div class="title__img">
@@ -299,7 +278,6 @@
           <p>Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque
             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
         </div>
-      </div>
       <div class="works">
 
         <div id="filter" class="works__menu">
@@ -315,9 +293,7 @@
           <div class="post brandi">
             <img src="assets/img/work-01.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
@@ -325,9 +301,7 @@
           <div class="post web">
             <img src="assets/img/work-02.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
@@ -335,9 +309,7 @@
           <div class="post logo">
             <img src="assets/img/work-03.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
@@ -345,9 +317,7 @@
           <div class="post photography">
             <img src="assets/img/work-04.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
@@ -355,36 +325,28 @@
           <div class="post brandi">
             <img src="assets/img/work-05.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
           </div>
           <div class="post web"><img src="assets/img/work-06.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
           </div>
           <div class="post logo"><img src="assets/img/work-07.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
           </div>
           <div class="post photography"><img src="assets/img/work-08.png" loading="lazy" alt="">
             <div class="works__content-hover">
-              <div class="works__content__img">
                 <img src="assets/img/view.png" alt="">
-              </div>
               <h3>Labore et dolore magnam</h3>
               <p>Photography</p>
             </div>
@@ -397,7 +359,6 @@
 
     <!-- Meet Our Team  -->
     <section class="team">
-      <div class="container">
         <div class="title">
           <h2>MEET OUR TEAM</h2>
           <div class="title__img">
@@ -409,7 +370,7 @@
             laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
         </div>
         <div class="team__content">
-          <section class="regular1 slider">
+          <section class="regular-01 slider">
             <div class="team__content__card">
                 <div class="team__content__img">
                   <img src="assets/img/team-01.png" alt="">
@@ -628,12 +589,10 @@
             </div>
           </section>
         </div>
-      </div>
     </section>
 
     <!-- Some Fun Facts -->
     <section class="background-facts">
-      <div class="container">
         <div class="title">
           <h2>SOME FUN FACTS</h2>
           <div class="title__img">
@@ -643,38 +602,35 @@
           </div>
         </div>
         <div class="facts">
-          <div class="row">
-            <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="">
               <div class="facts__img">
                 <img src="assets/img/funfacts-01.png" alt="">
               </div>
               <h3>3200</h3>
               <p>HOURS OF WORK</p>
             </div> 
-            <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="">
               <div class="facts__img">
                 <img src="assets/img/funfacts-02.png" alt="">
               </div>
               <h3>120</h3>
               <p>Satisfied Clinets</p>
             </div>
-            <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="">
               <div class="facts__img">
                 <img src="assets/img/funfacts-03.png" alt="">
               </div>
               <h3>360</h3>
               <p>Projects delivered</p>
             </div>
-            <div class="col-md-3 col-sm-3 col-xs-6">
+            <div class="">
               <div class="facts__img">
                 <img src="assets/img/funfacts-04.png" alt="">
               </div>
               <h3>42</h3>
               <p>Awards Won</p>
             </div>
-          </div>
         </div>
-      </div>
     </section>
 
     <!-- Discuss -->
@@ -688,9 +644,8 @@
         </div>
         <p>Voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore</p>
       </div>
-      <div class="container">
-        <div class="row">
-          <div class="col-md-3">
+      <div class="discuss__content">
+          <div class="discuss__content-left">
             <h3>
               Cras at ultrices erat, sed vulputate!
             </h3>
@@ -702,7 +657,7 @@
               ww.brandi.com
             </p>
           </div>
-          <div class="col-md-8">
+          <div class="discuss__content-center">
             <h2>Say hello!</h2>
             <div class="discuss__input">
               <input type="text" placeholder="Name">
@@ -716,7 +671,7 @@
               </a>
             </div>
           </div>
-          <div class="col-md-1">
+          <div class="discuss__content-right">
             <div class="discuss__icon">
               <img src="assets/img/discuss-01.png" alt="" title="behance.net">
               <img src="assets/img/discuss-02.png" alt="" title="https://twitter.com/">
@@ -726,7 +681,6 @@
               <img src="assets/img/discuss-06.png" alt="" title="https://www.facebook.com/">
             </div>
           </div>
-        </div>
       </div>
       <div class="discuss__map">
         <!-- <img src="assets/img/map.png" alt=""> -->
@@ -734,41 +688,42 @@
     </section>
   </main>
   <footer>
-    <div class="container">
+    <!-- <div class="container"> -->
       <div class="footer">
-        <div class="row">
-          <div class="col-md-3 col-sm-12">
+          <div>
             <h2>Brandi</h2>
             <p>eusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud
               exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat.
             </p>
           </div>
-          <div class="col-md-3 col-sm-6">
+          <div >
             <h3>Subscribe</h3>
             <div class="footer-input">
               <input type="text">
 
-              <a href="#"><img src="assets/img/footer-01.png" alt=""></a>
+              <a href="#"><img src="assets/img/footer-01.png" alt=""></a> 
             </div>
             <p>eusmod tempor incididunt ut labore et dolore magna aliqua. </p>
           </div>
-          <div class="col-md-3 col-sm-6 footer__explore">
+          <div class="footer__explore">
             <h3>Explore</h3>
-            <div class="col-md-6 col-sm-6">
-              <a href="#">Envato</a>
-              <a href="#">Themecurve</a>
-              <a href="#">Kreativeshowcase</a>
-              <a href="#">Freebiescurve</a>
-            </div>
-            <div class="col-md-6 col-sm-6 ">
-              <a href="#">Themeforest</a>
-              <a href="#">Microsoft</a>
-              <a href="#">Google</a>
-              <a href="#">Yahoo</a>
-            </div>
+            <ul>
+              <li >
+                <a href="#">Envato</a>
+                <a href="#">Themecurve</a>
+                <a href="#">Kreativeshowcase</a>
+                <a href="#">Freebiescurve</a>
+              </li>
+              <li >
+                <a href="#">Themeforest</a>
+                <a href="#">Microsoft</a>
+                <a href="#">Google</a>
+                <a href="#">Yahoo</a>
+              </li>
+            </ul>
           </div>
-          <div class="col-md-3 col-sm-12">
+          <div >
             <div class="footer-margin">a</div>
             <p class="footer-margin-bottom footer-border-left">Created with <img src="assets/img/heart.png" alt=""> by
               <span class="footer-black">Themecurve,
@@ -776,10 +731,9 @@
               </span>
             </p>
             <p class="footer-border-left footer-black"> © 2014 Brandi . All Rights Reserved</p>
-          </div>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
   </footer>
 
   <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
