--- a/index.html
+++ b/index.html
@@ -34,20 +34,19 @@
 
 
   <header>
-    <!-- <div class="container"> -->
-      <div class="header">
+      <div class="header" >
         <div class="header__logo">
-          <h1><a href="#">Brandi</a></h1>
+          <h1><a  href="#">Brandi</a></h1>
           <span>I'am your tag line</span>
         </div>
         <input type="checkbox" id="chk">
         <div class="header__menu">
           <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Feartures</a></li>
-            <li><a href="#">Works</a></li>
-            <li><a href="#">Team</a></li>
-            <li><a href="#">Contact</a></li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#feature">Feartures</a></li>
+            <li><a href="#work">Works</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
           <label for="chk" class="hide-menu-btn">
             <i class="fas fa-times"></i>
@@ -57,10 +56,9 @@
           <i class="fas fa-bars"></i>
         </label>
       </div>
-    <!-- </div> -->
   </header>
   <main>
-    <div class="banner">
+    <div class="banner" id="home">
       <!-- Swiper -->
       <div class="swiper-container">
         <div class="swiper-wrapper">
@@ -161,7 +159,7 @@
     </div>
 
     <!-- features -->
-    <div class="background-features">
+    <div class="background-features" id="feature">
         <div class="title">
           <h2>FEATURES</h2>
           <div class="title__img">
@@ -267,7 +265,7 @@
     </div>
 
     <!-- works -->
-    <section class="background-works">
+    <section class="background-works" id="work">
         <div class="title">
           <h2>WORKS</h2>
           <div class="title__img">
@@ -286,9 +284,7 @@
           <button class="web">Web</button>
           <button class="logo">Logo Design</button>
           <button class="photography">Photography</button>
-
         </div>
-
         <div id="posts">
           <div class="post brandi">
             <img src="assets/img/work-01.png" loading="lazy" alt="">
@@ -358,7 +354,7 @@
     </section>
 
     <!-- Meet Our Team  -->
-    <section class="team">
+    <section class="team" id="team">
         <div class="title">
           <h2>MEET OUR TEAM</h2>
           <div class="title__img">
@@ -634,7 +630,7 @@
     </section>
 
     <!-- Discuss -->
-    <section class="discuss">
+    <section class="discuss" id="contact">
       <div class="title">
         <h2>LET'S DISCUSS</h2>
         <div class="title__img">
@@ -688,7 +684,6 @@
     </section>
   </main>
   <footer>
-    <!-- <div class="container"> -->
       <div class="footer">
           <div>
             <h2>Brandi</h2>
@@ -733,7 +728,6 @@
             <p class="footer-border-left footer-black"> © 2014 Brandi . All Rights Reserved</p>
         </div>
       </div>
-    <!-- </div> -->
   </footer>
 
   <script src="assets/js/vendor/jquery-2.2.4.min.js"></script>
